tests/ui/span/drop-location-span-error-rust-2021-incompatible-closure-captures-96258.stderr
error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/drop-location-span-error-rust-2021-incompatible-closure-captures-96258.rs:10:16
   |
LL |     pub(crate) async fn new(
   |                ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0412]: cannot find type `Duration` in this scope
  --> $DIR/drop-location-span-error-rust-2021-incompatible-closure-captures-96258.rs:12:19
   |
LL |         interval: Duration,
   |                   ^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use std::time::Duration;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0670.
For more information about an error, try `rustc --explain E0412`.
